--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
         <div class="experience-item">
             <img src="images/12.jpg" alt="Experience Image 1" class="experience-img">
             <div class="experience-content">
-                <h3><i class="fas fa-briefcase"></i> Senior Research Assistant</h3>
-                <p><i class="fas fa-university"></i> The University of Queensland & Queensland Children’s Hospital</p>
+                <h3><i class="fas fa-briefcase"></i> Senior Research Assistant/Technical Officer</h3>
+                <p><i class="fas fa-university"></i> The University of Queensland & Queensland Childrens Hospital</p>
                 <p><i class="fas fa-map-marker-alt"></i> Brisbane, Australia | Feb 2024 – Current</p>
                 <ul class="skills">
                     <li>Node.js</li>
                     <li>HTML</li>
                     <li>CSS</li>
                     <li>Chart.js</li>
+                    <li>Express.js</li>
                     <li>JavaScript</li>
+                    <li>Project management</li>
+                    <li>Data Visualization</li>
                 </ul>
              <!-- 成就部分 -->
         <div class="achievements">
@@ -85,6 +88,7 @@
                     <li>Data Cleaning</li>
                     <li>Python</li>
                     <li>Jira</li>
+                    <li>Excel</li>
                 </ul>
              <!-- 成就部分 -->
         <div class="achievements">
@@ -127,7 +131,7 @@
         <div class="education-item">
             <img src="images/UQ.png" alt="Education Image" class="experience-img">
             <div class="education-content">
-                <h3><i class="fas fa-graduation-cap"></i> University of Queensland</h3>
+                <h3><i class="fas fa-graduation-cap"></i> The University of Queensland</h3>
                 <p><i class="fas fa-book"></i> Master of Computer Science (Management)</p>
                 <p><i class="fas fa-map-marker-alt"></i> Brisbane, Australia | 2022 – 2024</p>
              <!-- 成就部分 -->
@@ -143,17 +147,22 @@
     </section>
 </body>
 <!-- About Me Section -->
-<section id="about" class="about-me">
-    <h2>About Me</h2>
-    <ul>
-        <li><i class="fas fa-map-marker-alt"></i> 📍 Location: Adelaide, Australia</li>
-        <li><i class="fas fa-lightbulb"></i> 💡 Optimistic & Vibrant: Naturally positive, I bring energy and enthusiasm to every situation.</li>
-        <li><i class="fas fa-book"></i> 📚 Quiet Contemplator: Equally comfortable with introspection and calm, serene moments.</li>
-        <li><i class="fas fa-rocket"></i> 🚀 Proactive Spirit: Always striving for improvement and embodying a "can-do" attitude.</li>
-        <li><i class="fas fa-water"></i> 🌊 Nature Lover: Drawn to the beauty of the outdoors, especially the tranquil seaside.</li>
-        <li><i class="fas fa-utensils"></i> 🍽️ Picnic Enthusiast: Finds joy in simple pleasures like a meal under the open sky.</li>
-    </ul>
-</section>
+<div class="about-container">
+    <section id="about" class="about-me">
+        <h2>About Me</h2>
+        <ul>
+            <li><i class="fas fa-map-marker-alt"></i> 📍 Location: Adelaide, Australia</li>
+            <li><i class="fas fa-lightbulb"></i> 💡 Optimistic & Vibrant: Naturally positive, I bring energy and enthusiasm to every situation.</li>
+            <li><i class="fas fa-book"></i> 📚 Quiet Contemplator: Equally comfortable with introspection and calm, serene moments.</li>
+            <li><i class="fas fa-rocket"></i> 🚀 Proactive Spirit: Always striving for improvement and embodying a "can-do" attitude.</li>
+            <li><i class="fas fa-water"></i> 🌊 Nature Lover: Drawn to the beauty of the outdoors, especially the tranquil seaside.</li>
+            <li><i class="fas fa-utensils"></i> 🍽️ Picnic Enthusiast: Finds joy in simple pleasures like a meal under the open sky.</li>
+        </ul>
+    </section>
+    <div class="about-gif">
+        <img src="images/lego.gif" alt="GIF Image">
+    </div>
+</div>
 </div>
 </body>
 </html>
