--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="experience-item">
             <img src="images/12.jpg" alt="Experience Image 1" class="experience-img">
             <div class="experience-content">
-                <h3><i class="fas fa-briefcase"></i> Senior Research Assistant/Technical Officer</h3>
+                <h3><i class="fas fa-briefcase"></i> Technical Officer/Senior Research Assistant</h3>
                 <p><i class="fas fa-university"></i> The University of Queensland & Queensland Childrens Hospital</p>
                 <p><i class="fas fa-map-marker-alt"></i> Brisbane, Australia | Feb 2024 – Current</p>
                 <ul class="skills">
