--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <img src="images/pccu.jpg" alt="Experience GIF 3" class="experience-img">
             <div class="experience-content">
                 <h3><i class="fas fa-wrench"></i> IT Support Specialist</h3>
-                <p><i class="fas fa-school"></i> Chinese Cultural University</p>
+                <p><i class="fas fa-school"></i> Cultural University</p>
                 <p><i class="fas fa-map-marker-alt"></i> Taipei, Taiwan | Dec 2017 – July 2021</p>
                 <ul class="skills">
                     <li>System Maintenance</li>
