--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#home" class="menu-item">Home</a>
             <a href="#experience" class="menu-item">Experience</a>
             <a href="#about" class="menu-item">About Me</a>
+            <a href="#home" class="menu-item">Projects</a>
         </div>
     </nav>
 
@@ -27,12 +28,14 @@
             <h1>I'm Andrew Cheng.</h1>
             <p class="subtitle">Software Engineer | Data Analyst | IT Support</p>
             <div class="social-links">
-                <a href="https://github.com/your-github" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/andrewcheng887/" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
             <div class="buttons">
-                
-                <a href="https://www.linkedin.com/in/andrewcheng887/" class="button">Contact</a>
+                <a href="https://www.linkedin.com/in/andrewcheng887/" class="links-buttons" target="_blank">Contact</a>
+            </div>
+            <div class="buttons">
+                <a href="data-visualisation.html" class="button">Data Visualisation Projects</a>
+                <a href="Thesis.html" class="button">Thesis</a>
             </div>
         </div>
         <div class="scroll-down">
@@ -53,7 +56,7 @@
             <div class="experience-content">
                 <h3><i class="fas fa-briefcase"></i>Technical Officer/Senior Research Assistant</h3>
                 <p><i class="fas fa-university"></i>The University of Queensland & Queensland Childrens Hospital</p>
-                <p><i class="fas fa-map-marker-alt"></i> Brisbane, Australia | Feb 2024 – Current</p>
+                <p><i class="fas fa-map-marker-alt"></i>Brisbane, Australia | Feb 2024 - Current</p>
                 <ul class="skills">
                     <li>Node.js</li>
                     <li>HTML</li>
@@ -79,7 +82,7 @@
             <div class="experience-content">
                 <h3><i class="fas fa-database"></i>Data Analyst</h3>
                 <p><i class="fas fa-building"></i>Desygner</p>
-                <p><i class="fas fa-map-marker-alt"></i> Gold Coast, Australia | Jan 2024 – Mar 2024</p>
+                <p><i class="fas fa-map-marker-alt"></i>Gold Coast, Australia | Jan 2024 - Mar 2024</p>
                 <ul class="skills">
                     <li>MySQL</li>
                     <li>Data Visualization</li>
@@ -105,7 +108,7 @@
             <div class="experience-content">
                 <h3><i class="fas fa-wrench"></i>IT Support Specialist</h3>
                 <p><i class="fas fa-school"></i>Cultural University</p>
-                <p><i class="fas fa-map-marker-alt"></i> Taipei, Taiwan | Dec 2017 – July 2021</p>
+                <p><i class="fas fa-map-marker-alt"></i>Taipei, Taiwan | Dec 2017 - July 2021</p>
                 <ul class="skills">
                     <li>System Maintenance</li>
                     <li>Troubleshooting</li>
@@ -133,7 +136,7 @@
             <div class="education-content">
                 <h3><i class="fas fa-graduation-cap"></i>The University of Queensland</h3>
                 <p><i class="fas fa-book"></i>Master of Computer Science (Management)</p>
-                <p><i class="fas fa-map-marker-alt"></i> Brisbane, Australia | 2022 – 2024</p>
+                <p><i class="fas fa-map-marker-alt"></i> Brisbane, Australia | 2022 - 2024</p>
              <!-- 成就部分 -->
         <div class="achievements">
             <h4>🌟Thesis</h4>
