AR & Thesis &format update

--- a/Thesis.html
+++ b/Thesis.html
@@ -21,6 +21,7 @@
             <div class="buttons">
                 <a href="data-visualisation.html" class="button">Data Visualisation Projects</a>
                 <a href="Thesis.html" class="button">Thesis</a>
+                <a href="AR.html" class="button">AR software projects</a>
             </div>
         </div>
     </nav>
@@ -52,7 +53,7 @@
                     <br><br>
                     This technology has various applications in surveillance, air traffic control, and other fields, providing an efficient way to monitor environments without actively broadcasting signals.
                 </p>
-                <img src="images/passive radar.jpg" alt="Passive Radar System Diagram" class="small-img">
+                <img src="images/passive radar.jpg" alt="Passive Radar System Diagram" class="project-img" style="width: 40%; margin: 10px auto;">
             </div>
             <div class="project">
                 <h3>Understanding CUDA Workflow</h3>
@@ -75,7 +76,24 @@
                 </p>
                 <img src="images/CUDA.JPG" alt="CUDA Workflow" class="project-img" style="width: 40%; margin: 10px auto;">
 
-            </div>   
+            </div>  
+            <div class="skills-section">
+                <h3>Skills Used in This Project</h3>
+                <ul class="skills-list">
+                    <li>C++</li>
+                    <li>C</li>
+                    <li>Python</li>
+                    <li>Algorithm</li>
+                    <li>CUDA</li>
+                    <li>High Performance Computing</li>
+                    <li>GPU</li>
+                    <li>CPU</li>
+                    <li>Parallel computing</li>
+                    <li>Research skills</li>
+                    <li>Communication system</li>
+                    <li>Data Visualisation</li>
+                </ul>
+            </div> 
         </section>
 
 
