--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div class="buttons">
                 <a href="data-visualisation.html" class="button">Data Visualisation Projects</a>
                 <a href="Thesis.html" class="button">Thesis</a>
+                <a href="AR.html" class="button">AR software project</a>
             </div>
         </div>
         <div class="scroll-down">
