--- a/data-visualisation.html
+++ b/data-visualisation.html
@@ -21,6 +21,7 @@
             <div class="buttons">
                 <a href="data-visualisation.html" class="button">Data Visualisation Projects</a>
                 <a href="Thesis.html" class="button">Thesis</a>
+                <a href="AR.html" class="button">AR software projects</a>
             </div>
         </div>
     </nav>
@@ -37,7 +38,20 @@
             </p>
             <img src="images/PowerBI-project1.JPG" alt="City of Adelaide Age Structure" class="project-img">
             <img src="images/PowerBI-project1-1.JPG" alt="City of Adelaide Age Structure" class="project-img">
-        </div>      
+        </div>  
+        <div class="skills-section">
+            <h3>Skills Used in This Project</h3>
+            <ul class="skills-list">
+                <li>PowerBI</li>
+                <li>Data Manipulation</li>
+                <li>Data Modeling</li>
+                <li>Data analysis</li>
+                <li>Data Cleaning</li>
+                <li>Data Visualisation</li>
+                <li>SQL</li>
+                <li>Excel</li>
+            </ul>
+        </div>     
     </section>
 
 
