--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Select a Project</h2>
-        <a href="data-visualisation.html" class="button">Data Visualisation Project</a>
+        <a href="data-visualisation.html" class="button">Adelaide Age Structure Data Visualisation</a>
         <a href="Thesis.html" class="button">Thesis</a>
         <a href="AR.html" class="button">AR software project</a>
-        <a href="AWL.html" class="button">Financial Data Visualization</a>
+        <a href="AWL.html" class="button">Financial Data Visualisation</a>
+        <a href="Map.html" class="button">Animal Rescue Mapping Visualisation</a>
     </div>
 </div>
 <script src="script.js"></script>
