typo Animal Rescue Mapping Visualisation

--- a/Map.html
+++ b/Map.html
@@ -34,7 +34,7 @@
 <script src="script.js"></script>
     <!-- Financial Report Section -->
     <section class="AWL-section">
-        <h2>Financial Report Visualization</h2>
+        <h2>Animal Rescue Mapping Visualisation</h2>
         
         <div class="project">
             <h3>Project Overview</h3>
