--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <a href="#home" class="menu-item">Home</a>
         <a href="#experience" class="menu-item">Experience</a>
         <a href="#about" class="menu-item">About Me</a>
-        <a href="#projects" class="menu-item" id="projects-btn">Projects</a> <!-- 添加ID，觸發模態窗口 -->
+        <a href="#projects" class="menu-item" id="projects-btn">Projects</a> 
     </div>
 </nav>
 
-<!-- 模態窗口結構 -->
+
 <div id="projects-modal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
@@ -62,7 +62,7 @@
                 <p>The University of Queensland & Queensland Childrens Hospital</p>
                 <p><i class="fas fa-map-marker-alt"></i>Brisbane, Australia | Feb 2024 - Current</p>
 
-             <!-- 成就部分 -->
+             <!-- achievements -->
         <div class="achievements">
             <h4>🌟Achievements</h4>
             <ul>
@@ -89,7 +89,7 @@
                 <p>Desygner</p>
                 <p><i class="fas fa-map-marker-alt"></i>Gold Coast, Australia | Jan 2024 - Mar 2024</p>
 
-             <!-- 成就部分 -->
+             <!-- achievements -->
         <div class="achievements">
             <h4>🌟Achievements</h4>
             <ul>
