--- a/Map.html
+++ b/Map.html
@@ -15,11 +15,11 @@
         <a href="index.html#home" class="menu-item">Home</a>
         <a href="index.html#experience" class="menu-item">Experience</a>
         <a href="index.html#about" class="menu-item">About Me</a>
-        <a href="#projects" class="menu-item" id="projects-btn">Projects</a> <!-- 添加ID，觸發模態窗口 -->
+        <a href="#projects" class="menu-item" id="projects-btn">Projects</a> 
     </div>
 </nav>
 
-<!-- 模態窗口結構 -->
+
 <div id="projects-modal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
