about me & link below

--- a/AR.html
+++ b/AR.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrew Cheng - AR Project</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="link-section.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +15,7 @@
     <div class="menu-content">
         <a href="index.html#home" class="menu-item">Home</a>
         <a href="index.html#experience" class="menu-item">Experience</a>
-        <a href="index.html#about" class="menu-item">About Me</a>
+        <a href="about.html" class="menu-item">About Me</a>
         <a href="#projects" class="menu-item" id="projects-btn">Projects</a> 
     </div>
 </nav>
@@ -75,6 +76,23 @@
             </ul>
         </div>
     </section>
+            <!-- link section -->
+            <section id="links-section">
+                <div class="links-container">
+                    <div class="link-category">
+                        <h3>Projects</h3>
+                        <a href="data-visualisation.html">Adelaide Age Structure Data Visualisation</a>
+                        <a href="Thesis.html">Thesis</a>
+                        <a href="AR.html">AR software project</a>
+                        <a href="AWL.html">Financial Data Visualisation</a>
+                        <a href="Map.html">Animal Rescue Mapping Visualisation</a>
+                    </div>
+                    <div class="link-category">
+                        <h3>Contact</h3>
+                        <a href="https://www.linkedin.com/in/andrewcheng887/" target="_blank">LinkedIn</a>
+                    </div>
+                </div>
+            </section>
     
 </body>
 </html>
