--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Andrew Cheng - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="link-section.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -16,7 +17,7 @@
     <div class="menu-content">
         <a href="#home" class="menu-item">Home</a>
         <a href="#experience" class="menu-item">Experience</a>
-        <a href="#about" class="menu-item">About Me</a>
+        <a href="about.html" class="menu-item">About Me</a>
         <a href="#projects" class="menu-item" id="projects-btn">Projects</a> 
     </div>
 </nav>
@@ -34,10 +35,11 @@
     </div>
 </div>
 <script src="script.js"></script>
+
     <!-- Header Section -->
     <header id="home" class="hero">
         <div class="hero-content">
-            <h1>I'm Andrew Cheng.</h1>
+            <h1>Hi, I'm Andrew Cheng.</h1>
             <p class="subtitle">Software Engineer | Data Analyst | IT Support</p>
             <div class="social-links">
                 <a href="https://www.linkedin.com/in/andrewcheng887/" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -58,7 +60,7 @@
         <div class="experience-item">
             <!-- <img src="images/12.jpg" alt="Experience Image 1" class="experience-img"> -->
             <div class="experience-content">
-                <h3>Technical Officer/Senior Research Assistant</h3>
+                <h3>Technical Officer / Senior Research Assistant</h3>
                 <p>The University of Queensland & Queensland Childrens Hospital</p>
                 <p><i class="fas fa-map-marker-alt"></i>Brisbane, Australia | Feb 2024 - Current</p>
 
@@ -115,7 +117,7 @@
                 <h3></i>IT Support Specialist</h3>
                 <p></i>Cultural University</p>
                 <p><i class="fas fa-map-marker-alt"></i>Taipei, Taiwan | Dec 2017 - July 2021</p>
-             <!-- 成就部分 -->
+
         <div class="achievements">
             <h4>🌟Achievements</h4>
             <ul>
@@ -150,23 +152,21 @@
 </body>
 
 
-<!-- About Me Section -->
-<div class="about-container">
-    <section id="about" class="about-me">
-        <h2>About Me</h2>
-        <ul>
-            <li>📍 Location: Adelaide, Australia</li>
-            <li>💡 Optimistic & Vibrant: Naturally positive, I bring energy and enthusiasm to every situation.</li>
-            <li>📚 Quiet Contemplator: Equally comfortable with introspection and calm, serene moments.</li>
-            <li>🚀 Proactive Spirit: Always striving for improvement and embodying a "can-do" attitude.</li>
-            <li>🌊 Nature Lover: Drawn to the beauty of the outdoors, especially the tranquil seaside.</li>
-            <li>🍽️ Picnic Enthusiast: Finds joy in simple pleasures like a meal under the open sky.</li>
-        </ul>
-    </section>
-    <div class="about-gif">
-        <img src="images/lego.gif" alt="GIF Image">
+<section id="links-section">
+    <div class="links-container">
+        <div class="link-category">
+            <h3>Projects</h3>
+            <a href="data-visualisation.html">Adelaide Age Structure Data Visualisation</a>
+            <a href="Thesis.html">Thesis</a>
+            <a href="AR.html">AR software project</a>
+            <a href="AWL.html">Financial Data Visualisation</a>
+            <a href="Map.html">Animal Rescue Mapping Visualisation</a>
+        </div>
+        <div class="link-category">
+            <h3>Contact</h3>
+            <a href="https://www.linkedin.com/in/andrewcheng887/" target="_blank">LinkedIn</a>
+        </div>
     </div>
-</div>
-</div>
+</section>
 </body>
 </html>
